--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,58 @@
-/* General Styles */
-body {
-    background-color: #000000;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: white;
-    text-align: center;
+@font-face {
+    font-family: 'Speed';
+    src: url('speed.ttf') format('truetype');
 }
 
-h1, p, div {
+@font-face {
+    font-family: 'ComicSauce';
+    src: url('/secretsauce/COMIC.TTF') format('truetype');
+}
+
+body {
+    background-color: #1C1A1B;
+    margin: 0;
+    font-family: 'ComicSauce', Arial, sans-serif;
+    color: white;
     text-align: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 h1 {
-    display: inline-block;
-    width: 100%;
-}
-
-/* Text Stroke and Fill */
-@supports (-webkit-text-stroke: 1px white) {
-    h1, p, div {
-        -webkit-text-stroke: 1px black;
-        -webkit-text-fill-color: white;
-    }
-}
-
-/* Image Styles */
-img {
-    display: block;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 767px) {
-    img {
-        width: 100%;
-    }
-}
-
-/* Box and Centering */
-.box {
-    display: inline-block;
-    width: 100%;
+    color: #07F468;
+    font-family: 'Speed', Arial, sans-serif;
+    font-size: 50vh;
+    margin: 0;
+    line-height: 1;
     text-align: center;
 }
 
 .center {
-    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-/* Marquee Styles */
-.marquee {
-    height: 75px;
+.bottom-right-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+}
+
+.bottom-right-icon img {
     width: 100%;
-    overflow: hidden;
-    position: relative;
+    height: auto;
+    transition: transform 0.2s ease;
 }
 
-.marquee-content {
-    display: flex;
-    justify-content: space-between;
-    animation: marquee 25s linear infinite;
-}
-
-.marquee:hover .marquee-content {
-    animation-play-state: paused;
-}
-
-@keyframes marquee {
-    0%, 100% {
-        transform: translateX(100%);
-    }
-    50% {
-        transform: translateX(-100%);
-    }
+.bottom-right-icon:hover img {
+    transform: scale(1.2);
 }
