--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* General Styles */
 @font-face {
     font-family: 'Speed';
     src: url('resources/speed.ttf') format('truetype');
@@ -182,7 +181,7 @@ p {
   display: block;
   width: 50px;
   height: 50px;
-  background-color: #000;  
+  background-color: #fff;  
   border-radius: 50%;
   overflow: hidden;  
   text-decoration: none;
@@ -196,29 +195,6 @@ p {
 }
 
 #menu-icons-menu li a:hover {
-  background-color: #555; 
-  transform: scale(1.1);  
-}
-
-#menu-icons-menu li b {
-  display: block;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;  
-  border-radius: 50%;
-  overflow: hidden;  
-  text-decoration: none;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-#menu-icons-menu li b img {
-  width: 100%;  
-  height: 100%;
-  object-fit: cover;  
-}
-
-#menu-icons-menu li b:hover {
-  background-color: #555; 
   transform: scale(1.1);  
 }
 
@@ -320,4 +296,14 @@ p {
 
 .spost:hover {
 	animation: radiate 0.5s ease-out forwards;
+}
+
+body, .marquee {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar,
+.marquee::-webkit-scrollbar {
+    display: none;
 }
