--- a/extra/games.css
+++ b/extra/games.css
@@ -1,4 +1,3 @@
-/* games.css */
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +10,7 @@ html, body {
   justify-content: center;
   align-items: center;
   font-family: Arial, sans-serif;
+  background-color: #F6F6F6;
 }
 
 .center {
